@@ -50,6 +50,7 @@
 - removed the links feature, won't work with vips8
 - got rid of the tools/ subdirs
 - added im_bufjpeg2vips()
+- tiff reader can do 1, 2, 4, 8 bit palette images
 
 30/11/10 started 7.24.0
 - bump for new stable
